fixtures/vyper/simple/overflow/positive/i32-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "2147483647"
#!           ],
#!           "caller": "0xcf63E8940A45156ad1A428d51fe2B460Ec729a7c"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int32) -> int32:
    return witness + 1
