fixtures/vyper/simple/overflow/negative/i32-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-2147483648"
#!           ],
#!           "caller": "0xbeFA0420b8b444e5Af3eB088fb22F394Bbaa56B1"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int32) -> int32:
    return witness - 1
